[metadata]
name=cf_sender_policy_flattener
version=22.02.17
author = gunville
author_email = rk13088@yahoo.com
description = Flattens SPF records and updates Cloudflare zones
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/Glocktober/cfspflat
project_urls =
    repo = https://github.com/Glocktober/cfspflat.git
    overview = https://github.com/Glocktober/cfspflat/blob/master/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords='cloudflare dns spf'
[options]
include_package_data = True
package_dir = 
    = src
packages = find:
install_requires =
    cloudflare>=2.8.15
    sender-policy-flattener==0.3.1
python_requires = >=3.6
scripts = 
    scripts/cfspflat
[options.data_files] 
[options.packages.find]
where = src